--- a/01第一章-环境搭建.md
+++ b/01第一章-环境搭建.md
@@ -24,7 +24,7 @@
 
 ​	直接上下载链接：[Bochs x86 PC emulator download | SourceForge.net](https://sourceforge.net/projects/bochs/)，用ubuntu自带的火狐浏览器就可以下载，我下载的2.6.8版本，选择bochs-2.6.8.tar.gz下载。
 
-![image-20230315235520573](C:\Users\LFH\AppData\Roaming\Typora\typora-user-images\image-20230315235520573.png)
+![image-20230315235520573](https://gitee.com/lfh1234/picture/raw/master/image-20230315235520573.png)
 
 然后解压到想要的目录
 
@@ -94,7 +94,7 @@ ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 
 仅有一个配置文件还不够，我们需要运用bochs自带的功能生成一个虚拟的磁盘，他位于在你们bochs目录下bin目录里面。通过使用--help指令来查看
 
-![image-20230316001759538](C:\Users\LFH\AppData\Roaming\Typora\typora-user-images\image-20230316001759538.png)
+![image-20230316001759538](https://gitee.com/lfh1234/picture/raw/master/image-20230316001759538.png)
 
 接下来我们用 -hd= 创建一块60M的硬盘（过程按提示操作，type选flat），这里我将其命名为 hd60M.img。
 
@@ -102,7 +102,7 @@ ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
 bin/bximage -hd=60
 ```
 
-![image-20230316002136629](C:\Users\LFH\AppData\Roaming\Typora\typora-user-images\image-20230316002136629.png)
+![image-20230316002136629](https://gitee.com/lfh1234/picture/raw/master/image-20230316002136629.png)
 
 通过刚刚的配置文件启动
 
@@ -110,7 +110,7 @@ bin/bximage -hd=60
 bin/bochs -f bochsrc.disk
 ```
 
-![image-20230316003542720](C:\Users\LFH\AppData\Roaming\Typora\typora-user-images\image-20230316003542720.png)
+![image-20230316003542720](https://gitee.com/lfh1234/picture/raw/master/image-20230316003542720.png)
 
 可以看到启动起来了，但是我们的硬盘中什么都没有，所以是黑的。
 
